SERVER-14342 Invalid access: seg fault in SplitChunkCommand::run